# tokscope

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/: architecture.md  cli.md  mcp-tools.md  quickstart.md  writing-a-detector.md  writing-an-extractor.md
examples/: demo-prompts.md  sample-detector.py  sample-extractor.py  transcript.md
src/tokenscope/: aggregate.py  analytics_core.py  attribution.py  bash_parse.py  cli.py  db.py  discovery.py  ingest.py  investigate.py  mcp_server.py  parser.py  paths.py  pricing.py  server.py
src/tokenscope/plugins/: __init__.py  base.py  registry.py
src/tokenscope/plugins/builtins/: __init__.py
src/tokenscope/plugins/builtins/aggregators/: __init__.py
src/tokenscope/plugins/builtins/detectors/: __init__.py  agent_races.py  bash_retries.py  dead_search_patterns.py  duplicate_reads.py  error_chains.py  paging_reads.py  permission_denials.py  redundant_read_ranges.py  repeat_tasks.py
src/tokenscope/plugins/builtins/extractors/: __init__.py  bash_meta.py  bash_touched_files.py  read_range.py  status_class.py
src/tokenscope/web/: index.html
src/tokscope/: aggregate.py  analytics_core.py  bash_parse.py  cli.py  db.py  discovery.py  mcp_server.py  parser.py  server.py
src/tokscope/plugins/: base.py  registry.py
src/tokscope/plugins/builtins/detectors/: agent_races.py  bash_retries.py  repeat_tasks.py
src/tokscope/plugins/builtins/extractors/: __init__.py  bash_meta.py  bash_touched_files.py
src/tokscope/web/: app.js  style.css
tests/: conftest.py  test_analytics_core.py  test_detectors.py  test_extractors.py  test_investigate.py  test_mcp.py  test_registry.py
