[project]
name = "tokenscope"
version = "0.1.0"
description = "Token-spend analytics for Claude Code — per-tool, per-task, per-project. CLI + web dashboard + MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ori Hamama", email = "orihh8@gmail.com" },
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "mcp",
    "model-context-protocol",
    "analytics",
    "tokens",
    "observability",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "watchdog>=4.0",
    "httpx>=0.27",
    "rich>=13",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.7",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/orihamama/tokenscope"
Issues = "https://github.com/orihamama/tokenscope/issues"
Source = "https://github.com/orihamama/tokenscope"
Changelog = "https://github.com/orihamama/tokenscope/blob/main/CHANGELOG.md"

[project.scripts]
tokenscope = "tokenscope.cli:app"

# Plugin entry points — third-party packages can register extractors,
# aggregators, or detectors that tokenscope picks up automatically.
# Built-ins live in `src/tokenscope/plugins/builtins/`; these groups
# document the public extension API.
[project.entry-points."tokenscope.extractors"]
# Example: my_extractor = "my_pkg.module:MyExtractor"

[project.entry-points."tokenscope.aggregators"]
# Example: my_aggregator = "my_pkg.module:MyAggregator"

[project.entry-points."tokenscope.detectors"]
# Example: my_detector = "my_pkg.module:MyDetector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenscope"]
# Static web assets are included via the package itself; no force-include needed.

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src"]

[tool.coverage.run]
source = ["src/tokenscope"]
branch = true
